<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="350dp"
        android:text="@string/magicString"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:ignore="ObsoleteLayoutParam"
        android:layout_marginStart="100dp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginStart="70dp"
        android:src="@drawable/magic"
        android:contentDescription="@string/pictDescription"
        android:layout_marginLeft="70dp" />

    <TextView
        android:id="@+id/next_step"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="450dp"
        android:text="@string/nextStep"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/n_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="445dp"
        android:text="@string/nextBtn"
        android:background="@color/colorYellow"
        tools:ignore="ContentDescription" />


</RelativeLayout>